--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@iconify-icons/bx": "^1.1.4",
+    "@iconify/vue": "^3.1.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
